--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.1",
+    "nativewind": "^2.0.11",
+    "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "~2.0.4",
@@ -37,11 +39,13 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "^0.19.9",
+    "tailwindcss": "3.3.2",
     "tamagui": "^1.88.17"
   },
   "devDependencies": {
     "@babel/core": "^7.23.3",
-    "@types/react": "~18.2.14"
+    "@types/react": "~18.2.14",
+    "tailwindcss": "^3.3.2"
   },
   "private": true,
   "packageManager": "yarn@4.0.2"
