--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "3.1.1",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/blur": "^4.4.0",
     "@react-navigation/native": "^6.0.2",
     "@shopify/react-native-skia": "^0.1.237",
+    "@supabase/supabase-js": "^2.39.7",
     "@tamagui/config": "^1.88.17",
     "@tamagui/metro-plugin": "^1.88.17",
     "babel-preset-expo": "^10.0.1",
@@ -35,9 +37,11 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "~2.0.4",
     "react-native": "0.73.2",
+    "react-native-elements": "^3.4.3",
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.19.9",
     "tailwindcss": "3.3.2",
     "tamagui": "^1.88.17"
@@ -45,6 +49,7 @@
   "devDependencies": {
     "@babel/core": "^7.23.3",
     "@types/react": "~18.2.14",
+    "react-native-dotenv": "^3.4.10",
     "tailwindcss": "^3.3.2"
   },
   "private": true,
