--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-helmet-async": "~2.0.4",
     "react-native": "0.73.2",
     "react-native-elements": "^3.4.3",
+    "react-native-paper": "^5.12.3",
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
