--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@expo/metro-runtime": "3.1.1",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/blur": "^4.4.0",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.0.2",
     "@shopify/react-native-skia": "^0.1.237",
     "@supabase/supabase-js": "^2.39.7",
