added image upload in expense form

--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "@tamagui/config": "^1.88.17",
     "@tamagui/metro-plugin": "^1.88.17",
     "babel-preset-expo": "^10.0.1",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "50.0.4",
+    "expo-crypto": "^12.8.1",
+    "expo-file-system": "~16.0.7",
     "expo-font": "~11.10.2",
+    "expo-image-picker": "~14.7.1",
     "expo-linking": "~6.2.1",
     "expo-router": "~3.4.4",
     "expo-splash-screen": "~0.26.3",
