--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-expo": "^10.0.1",
     "base64-arraybuffer": "^1.0.2",
     "expo": "50.0.4",
+    "expo-contacts": "~12.8.2",
     "expo-crypto": "^12.8.1",
     "expo-file-system": "~16.0.7",
     "expo-font": "~11.10.2",
