--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@supabase/supabase-js": "^2.39.7",
     "@tamagui/config": "^1.88.17",
     "@tamagui/metro-plugin": "^1.88.17",
+    "@tanstack/react-query": "^5.24.1",
     "babel-preset-expo": "^10.0.1",
     "base64-arraybuffer": "^1.0.2",
     "expo": "50.0.4",
