--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-helmet-async": "~2.0.4",
     "react-native": "0.73.2",
     "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.15.0",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "4.8.2",
