--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.5",
     "@expo/metro-runtime": "3.1.1",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/blur": "^4.4.0",
@@ -37,6 +38,7 @@
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.1",
+    "graphql": "^15.8.0",
     "nativewind": "^2.0.11",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
